# json-schemas

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yml  release.yml
configschema/: main.py
jsonSchemas/: exampleConfig.json  main.py
jsonSchemas/examples/: modsList.json  serverList.json
