[tool.poetry]
name = "jsonSchemas"
version = "0.1.4"
description = "A ConfigSchema Generator for TeaClient"
authors = ["eveeifyeve <eveeg1971@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.scripts]
configschema = "jsonSchemas.main:main"

[tool.poetry.dependencies]
python = "^3.12"
genson = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
